Loading times of files that link in external data has become inacceptable #61855

Closed
opened 2019-02-22 16:39:54 +01:00 by Rainer Trummer · 7 comments

System Information
Operating system: Windows 10, latest SP
Graphics card: Quadro K4000

Blender Version
Broken: 358e07f447
Worked: f3e9dff03d

Short description of error
The mentioned commit tries to reduce the memory usage when loading linked data. While this may work fine, loading times of such files increased for us in the studio dramatically. As an example, loading time of a file that only links from a single library increased from 2 seconds to roughly two minutes. I am loading both the file and the linked data from a network drive which is write protected. Other files have not suffered that much, but also open way slower than before.

Exact steps for others to reproduce the error
Can't provide a blend as these projects are confidential. The only thing I can post so far is a screenshot of the outliner in 'blend file' mode:

items.PNG

**System Information** Operating system: Windows 10, latest SP Graphics card: Quadro K4000 **Blender Version** Broken: 358e07f447e9ed7f87f419e8d027e73c97c00077 Worked: f3e9dff03d9bde0d3002eecb1d51dd0baabbb285 **Short description of error** The mentioned commit tries to reduce the memory usage when loading linked data. While this may work fine, loading times of such files increased for us in the studio dramatically. As an example, loading time of a file that only links from a single library increased from 2 seconds to roughly two minutes. I am loading both the file and the linked data from a network drive which is write protected. Other files have not suffered that much, but also open way slower than before. **Exact steps for others to reproduce the error** Can't provide a blend as these projects are confidential. The only thing I can post so far is a screenshot of the outliner in 'blend file' mode: ![items.PNG](https://archive.blender.org/developer/F6687569/items.PNG)
Author

Added subscriber: @RainerTrummer

Added subscriber: @RainerTrummer
Campbell Barton was assigned by Rainer Trummer 2019-02-22 16:40:34 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

I tested .blend load time on a Spring production file on my Linux desktop. Here the change actually improved load time significantly.

Before After
Local SSD 08.28s 5.04s
NFS Network 19.18s 14.04s

This problem may be Windows specific, I've run into extremely slow random access on network drivers there before. Using std::ifstream and seeking instead of mmap helped in that case, apparently due to memory mapping not always going through the system file cache. This might be the same kind of issue.

@ideasman42, maybe we can disable this change on Windows for now, and then investigate how to fix it later? The Linux file load time is actually a great improvement I didn't expect from this change.

I tested .blend load time on a Spring production file on my Linux desktop. Here the change actually improved load time significantly. | | Before | After | | -- | -- | -- | | Local SSD | 08.28s | 5.04s | | NFS Network | 19.18s | 14.04s | This problem may be Windows specific, I've run into extremely slow random access on network drivers there before. Using `std::ifstream` and seeking instead of `mmap` helped in that case, apparently due to memory mapping not always going through the system file cache. This might be the same kind of issue. @ideasman42, maybe we can disable this change on Windows for now, and then investigate how to fix it later? The Linux file load time is actually a great improvement I didn't expect from this change.

This issue was referenced by 779860d34e

This issue was referenced by 779860d34e26bedfb24904bc6261db5cbe9afdbf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

I'll disable this for windows - for now, this could be tuned by only applying to blocks over a certain size - however if seeking is very slow, this may still be slower.

In my own tests on a HDD (not an SSD) I saw speedups similar to Brecht's, so I didn't think it necessary to tweak.

I'll disable this for windows - for now, this could be tuned by only applying to blocks over a certain size - however if seeking is very slow, this may still be slower. In my own tests on a HDD (not an SSD) I saw speedups similar to Brecht's, so I didn't think it necessary to tweak.

Looks like this is a duplicate for #61880, re-enabling read on demand for WIN32.

Looks like this is a duplicate for #61880, re-enabling read on demand for WIN32.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61855
No description provided.