readfile: disable delayed data reading for WIN32

Seeking the file causes slow down on Windows.

Resolves T61855